// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should render <h1> tag 1`] = `
<h1
  class="StyledHeading-fbinjh-0 gFJxUA"
  color="default"
>
  children
</h1>
`;

exports[`<Heading /> should render <h2> tag 1`] = `
<h2
  class="StyledHeading-fbinjh-0 eRmVIj"
  color="default"
>
  children
</h2>
`;

exports[`<Heading /> should render <h3> tag 1`] = `
<h3
  class="StyledHeading-fbinjh-0 jXetbN"
  color="default"
>
  children
</h3>
`;

exports[`<Heading /> should render <h4> tag 1`] = `
<h4
  class="StyledHeading-fbinjh-0 jMnNVB"
  color="default"
>
  children
</h4>
`;

exports[`<Heading /> should render <h5> tag 1`] = `
<h5
  class="StyledHeading-fbinjh-0 fKywgy"
  color="default"
>
  children
</h5>
`;

exports[`<Heading /> should render <h6> tag 1`] = `
<h6
  class="StyledHeading-fbinjh-0 dORoPn"
  color="default"
>
  children
</h6>
`;

exports[`<Heading /> should render correctly with custom props 1`] = `
<h3
  class="StyledHeading-fbinjh-0 bEjsBB"
  color="primary"
>
  children
</h3>
`;

exports[`<Heading /> should render correctly with default props 1`] = `
<h1
  class="StyledHeading-fbinjh-0 gFJxUA"
  color="default"
>
  children
</h1>
`;

exports[`<Heading /> should render should large <h6> heading 1`] = `
<h6
  class="StyledHeading-fbinjh-0 gFJxUA"
  color="default"
>
  children
</h6>
`;
